# bbm_label_explorer

./: .env.production  .eslintrc.json  .gitignore  README.md  db.json  jest.config.cjs  msi.ps1  package-lock.json  package.json  sign.ps1  vite.config.ts
docs/: BBM_Label_Explorer.pptx  BBM_Label_Explorer_Presentation_Content.md  environment-config.md  generate_uml_diagrams.bat  how_to_view_diagrams.md  label_validation_flow.puml  label_validation_flow_readme.md  label_validation_high_level.puml  label_validation_high_level_fixed.puml  result_table_error_display.puml  result_table_error_flow.puml
scripts/: generate-updater-keys.js
src/: App.tsx  db.json  extractTauriUrls.ts  index.css  main.tsx  tauri.d.ts
src-tauri/: 2  Cargo.toml  config.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/__tests__/: KeywordSearch.menu.test.tsx  KeywordSearch.test.tsx  KeywordSearch.window.test.ts  KeywordSearch.window.test.tsx  Settings.test.tsx  SplashScreen.test.tsx  TauriTrayWindow.integration.test.ts  darkModeAppBehavior.test.tsx  darkModeStyles.test.tsx  jest.setup.js
src/components/: index.ts
src/components/KeywordSearch/: KeywordSearch.css  KeywordSearch.tsx  responsive.css
src/components/Settings/: README.md  Settings.css  Settings.tsx  constants.ts  index.ts  types.ts
src/config/: index.ts
src/context/: AppContext.tsx  ResponsiveContext.tsx
src/hooks/: index.ts  useDebounce.ts  useLocalStorage.ts  useTauriEvent.ts  useTheme.ts  useWindowSize.ts
src/types/: tauri.d.ts
src/utils/: errorHandling.ts
(+12 files in other folders)
