[package]
name = "ailabelassist"
version = "0.1.0"
description = "A Tauri App"
authors = ["UPY1COB"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-utils = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35.1"
tokio = "1.45.0"
reqwest = "0.12.15"
futures-util = "0.3.31"
serde_yaml = "0.9.34"
hnsw_rs = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
