[package]
name = "bbm-label-explorer"
version = "1.0.0"
description = "BBM Label Explorer - A tool for AUTOSAR label validation"
authors = ["UPY1COB"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-utils = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35.1"
tokio = "1.45.0"
reqwest = "0.12.15"
chrono = "0.4"
futures-util = "0.3.31"
hnsw_rs = "0.3.1"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-single-instance = "2"

